--- a/The_Notebook.ipynb
+++ b/The_Notebook.ipynb
@@ -116,10 +116,10 @@
       },
       "source": [
         "from pyspark.sql import SparkSession\n",
-        "from pyspark.sql.functions import count, desc , col, max \n",
+        "from pyspark.sql.functions import count, desc , col, max , struct\n",
         "import matplotlib.pyplot as plts"
       ],
-      "execution_count": 3,
+      "execution_count": 39,
       "outputs": []
     },
     {
@@ -911,45 +911,29 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6d4e7530-4480-4364-a9f6-ab941918af8c"
+        "outputId": "37991874-be7f-4f8e-cd57-f779ebd5fcee"
       },
       "source": [
         "q6 = data.select('user_id','genre').groupby(\n",
-        "    'user_id','genre').agg( count('*').alias('count_each') ).groupby('user_id','genre').agg(\n",
-        "        max('count_each'))\n",
-        "q6.show()"
+        "    'user_id','genre').agg( count('*').alias('count_each') )\n",
+        "q6.show(5)"
       ],
-      "execution_count": 32,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "+---------------+--------------------+---------------+\n",
-            "|        user_id|               genre|max(count_each)|\n",
-            "+---------------+--------------------+---------------+\n",
-            "|          _0015|     psychedelic pop|              3|\n",
-            "|        01Green|          Maty Noyes|              1|\n",
-            "|      01srainey|            Big Sean|              2|\n",
-            "|      03swalker|                soul|              4|\n",
-            "|        0502008|       Keys N Krates|              2|\n",
-            "|       07berobe|national socialis...|             14|\n",
-            "|       07berobe|        gothic metal|              8|\n",
-            "|          0rdos|              celtic|              1|\n",
-            "|     0xenolith0|       drum and bass|              1|\n",
-            "|10bobrevolution|         000 Fathers|              4|\n",
-            "| 11shadesofgrey|          electronic|              6|\n",
-            "| 11shadesofgrey|             baroque|              1|\n",
-            "|      1337fatal|                jazz|             14|\n",
-            "|        14M5K0T|                jazz|             70|\n",
-            "|          16-19| June Carter & Me...|              1|\n",
-            "|          16-19| Kanye West & Pau...|              1|\n",
-            "|   1888Franklin|               metal|             17|\n",
-            "|           1936|       Woody Jackson|              1|\n",
-            "|       19nick81|             minimal|             42|\n",
-            "|   1Chordwonder| Jenny Lewis & Fr...|              1|\n",
-            "+---------------+--------------------+---------------+\n",
-            "only showing top 20 rows\n",
+            "+---------+---------------+----------+\n",
+            "|  user_id|          genre|count_each|\n",
+            "+---------+---------------+----------+\n",
+            "|    _0015|psychedelic pop|         3|\n",
+            "|  01Green|     Maty Noyes|         1|\n",
+            "|01srainey|       Big Sean|         2|\n",
+            "|03swalker|           soul|         4|\n",
+            "|  0502008|  Keys N Krates|         2|\n",
+            "+---------+---------------+----------+\n",
+            "only showing top 5 rows\n",
             "\n"
           ]
         }
@@ -958,13 +942,37 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Soy2bMxQN-Ub"
+        "id": "Soy2bMxQN-Ub",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d2822684-e349-4d10-c943-538f85562971"
       },
       "source": [
-        ""
+        "q8 = q6.groupby('user_id').agg(\n",
+        "        max( struct( col('count_each'), col('genre') ) ).alias('max')).orderBy(desc('max')).select(\n",
+        "            col('user_id'), col('max.genre'))\n",
+        "q8.show(4)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+---------+-----+\n",
+            "|  user_id|genre|\n",
+            "+---------+-----+\n",
+            "|mrsands91|  r&b|\n",
+            "|Benjiibop|  r&b|\n",
+            "|sbrooks91|  r&b|\n",
+            "|  Pete557|  r&b|\n",
+            "+---------+-----+\n",
+            "only showing top 4 rows\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
